objects/agf__ADM_Feature_Freeze_Status__c.object
<CustomObject>
    <fields>
        <fullName>agf__Accessibility_Bugs_Closed__c</fullName>
        <inlineHelpText>Are all Accessibility bugs closed?</inlineHelpText>
        <label>Accessibility Bugs Closed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Applicable UI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Accessibility_Dashboard_link__c</fullName>
        <description>Link to Accessibility Dashboard</description>
        <formula>HYPERLINK(&apos;https://gus.my.salesforce.com/01ZB00000008jrd&apos;,&apos;Accessibility Dashboard Link&apos;)</formula>
        <label>Accessibility Dashboard link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__All_New_Features_DONE__c</fullName>
        <description>All new product development meets the Definition Of Done.</description>
        <inlineHelpText>All new product development meets the Definition Of Done:  https://sites.google.com/a/salesforce.com/adm/definition-of-done?AuthEventSource=SSO</inlineHelpText>
        <label>Features Meet Definition of Done</label>
        <picklist>
            <picklistValues>
                <fullName>False</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__All_New_Upgraded_3PP_are_Approved__c</fullName>
        <description>All New or Upgraded 3rd Party Software Products have Approval through the 3PP Process (Yes/No)</description>
        <inlineHelpText>All New or Upgraded 3rd Party Software Products have Approval through the 3PP Process.  Feature Freeze requirement is that all are APPROVED.</inlineHelpText>
        <label>All New/Upgraded 3PP are Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__All_Security_Bugs_Closed__c</fullName>
        <inlineHelpText>P012 Security Bugs are closed or approved by ProdSec in the release that is open at the time of their discovery.</inlineHelpText>
        <label>All Security Bugs Closed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__All_Security_Stories_Closed__c</fullName>
        <label>All Security Stories Closed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__All_Sprint_DOD_Criteria_Met__c</fullName>
        <inlineHelpText>All Sprint DOD criteria must be met</inlineHelpText>
        <label>All Sprint DOD Criteria Met</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Assessment_Details__c</fullName>
        <inlineHelpText>Please provide details on why the team is in Yellow or Red status in  terms of meeting FF</inlineHelpText>
        <label>Assessment Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Automated_Tests_Annotated__c</fullName>
        <inlineHelpText>Percent of existing automated tests that have been annotated.  FF criterion is at least 60%.</inlineHelpText>
        <label>% Automated Tests Annotated (&gt;=80%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__Biz_SOX_Compliance_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Legal, tax, regulatory, regional, Business SOX compliance met.  Business SOX narratives have been updated or plan to be updated as appropriate.</inlineHelpText>
        <label>Biz SOX Compliance Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Bugs_Fixed_the_Week_of_Feature_Freeze__c</fullName>
        <description>Bugs Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</description>
        <inlineHelpText>Bugs Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</inlineHelpText>
        <label>Bugs Fixed the Week of Feature Freeze</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Bugs_TF_Fixed_the_Week_of_Feature_Freeze__c</fullName>
        <description>Bugs/TF Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</description>
        <inlineHelpText>Bugs/TF Fixed the Week of Feature Freeze (explain if count is high relative to previous 2-3 weeks)</inlineHelpText>
        <label>Bugs/TF Fixed the Week of Feature Freeze</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Build__c</fullName>
        <formula>agf__Team_Release__r.agf__Build__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Build</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Changes_to_Hub_Agent__c</fullName>
        <description>Any changes to the Hub &amp; Agent?</description>
        <inlineHelpText>Any changes to the Hub &amp; Agent?</inlineHelpText>
        <label>Changes to Hub &amp; Agent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Changes_to_Logging__c</fullName>
        <description>Any changes to the way things are logged?</description>
        <inlineHelpText>Any changes to the way things are logged?</inlineHelpText>
        <label>Changes to Logging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Changes_to_ping_jsp__c</fullName>
        <description>Any changes to ping.jsp?</description>
        <inlineHelpText>Any changes to ping.jsp?</inlineHelpText>
        <label>Changes to ping.jsp</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Code_Line_is_Potentially_Releasable__c</fullName>
        <description>Code Line is Potentially Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Bug/TF Criteria below (Yes/No)</description>
        <inlineHelpText>Code Line is Potentially Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Bug/TF Criteria below (Yes/No)</inlineHelpText>
        <label>Code Line is Potentially Releasable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Confirmed_not_on_BM_Top_10_List__c</fullName>
        <description>Team must confirm that they are not on the Buildmaster&apos;s Top 10 sheet:

https://docs.google.com/a/salesforce.com/spreadsheet/ccc?key=0AkkHOEHyPs0CdG54akZNN2FCektGSllIOENCVk8zUlE#gid=0</description>
        <inlineHelpText>Has team confirmed that it is not on the Buildmaster&apos;s Top 10 list?</inlineHelpText>
        <label>Confirmed not on BM Top 10 List?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__DB_Upgrade_Scripts_Complete_and_Verified__c</fullName>
        <description>DB Upgrade Scripts Complete and Verified (Yes/No)</description>
        <inlineHelpText>DB Upgrade Scripts Complete and Verified (Yes/No)</inlineHelpText>
        <label>DB Upgrade Scripts Complete and Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Deferred_Work__c</fullName>
        <inlineHelpText>This is work that has been moved to next release that has been placed behind a perm.</inlineHelpText>
        <label>Deferred Work</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Dependencies_on_other_teams_closed__c</fullName>
        <inlineHelpText>Dependencies from other teams = Closed</inlineHelpText>
        <label>Dependencies from other teams closed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Dev_Leadership_Confirmation_Details__c</fullName>
        <label>Dev Leadership Confirmation Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Dev_Leadership_Sign_Off_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by Development Leader responsible for confirming team signoff.</inlineHelpText>
        <label>Dev Leadership Sign Off Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Dev_Signoff_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Signoff By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Feature_Freeze_Team_Status1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__EA_2Week_NotReady_Comment__c</fullName>
        <inlineHelpText>Explain what your next steps are and what assistance you need.</inlineHelpText>
        <label>Next steps or assistance needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__EA_2Week_NotReady_Label__c</fullName>
        <formula>&quot;We may be the team that causes the release to be delayed.&quot; +  BR() +
&quot;(Explain what your next steps are and what assistance you need.)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__EA_2Week_NotReady_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if: &quot;We may be the team that causes the release to be delayed.&quot;</inlineHelpText>
        <label>C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__EA_2Week_Ready_Label__c</fullName>
        <formula>&quot;At Feature Freeze, we’ll be ready to release to GS0 and provide a great experience for internal and external users. If necessary, we will disable incomplete features at Feature Freeze.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__EA_2Week_Ready_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if: &quot;At Feature Freeze, we’ll be ready to release to GS0 and provide a great experience for internal and external users. If necessary, we will disable incomplete features at Feature Freeze.&quot;</inlineHelpText>
        <label>A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__EA_2Week_Risk_Comment__c</fullName>
        <inlineHelpText>Explain your proposed alternative solution and any assistance you need.</inlineHelpText>
        <label>Comments or assistance needed</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__EA_2Week_Risk_Label__c</fullName>
        <formula>&quot;Excluding hammer tests, we probably won&apos;t be done at Feature Freeze but we can release if we can come up with an alternative solution.&quot; +  BR() +
&quot;(Explain your proposed alternative solution and any assistance you need.)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__EA_2Week_Risk_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if: &quot;Excluding hammer tests, we probably won&apos;t be done at Feature Freeze but we can release if we can come up with an alternative solution.&quot;</inlineHelpText>
        <label>B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__EA_6Week_NotReady_Comment__c</fullName>
        <inlineHelpText>Explain what your next steps are and what assistance you need.</inlineHelpText>
        <label>Next steps or assistance needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__EA_6Week_NotReady_Label__c</fullName>
        <formula>&quot;We may be the team that causes the release to be delayed.&quot; +  BR() +
&quot;(Explain what your next steps are and what assistance you need.)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__EA_6Week_NotReady_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if: &quot;We may be the team that causes the release to be delayed.&quot;</inlineHelpText>
        <label>C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__EA_6Week_Ready_Label__c</fullName>
        <formula>&quot;At Feature Freeze, we’ll be ready to release to GS0 and provide a great experience for internal and external users. If necessary, we will disable incomplete features at Feature Freeze.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__EA_6Week_Ready_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if: &quot;At Feature Freeze, we’ll be ready to release to GS0 and provide a great experience for internal and external users. If necessary, we will disable incomplete features at Feature Freeze.&quot;</inlineHelpText>
        <label>A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__EA_6Week_Risk_Comment__c</fullName>
        <inlineHelpText>Explain your proposed alternative solution and any assistance you need.</inlineHelpText>
        <label>Comments or assistance needed</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__EA_6Week_Risk_Label__c</fullName>
        <formula>&quot;Excluding hammer tests, we probably won&apos;t be done at Feature Freeze but we can release if we can come up with an alternative solution.&quot; +  BR() +
&quot;(Explain your proposed alternative solution and any assistance you need.)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__EA_6Week_Risk_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if: &quot;Excluding hammer tests, we probably won&apos;t be done at Feature Freeze but we can release if we can come up with an alternative solution.&quot;</inlineHelpText>
        <label>B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__EA_Concerns_Label__c</fullName>
        <formula>&quot;What are your team&apos;s biggest concerns or risks? Do you want to provide any additional comments?&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__EA_Concerns_Response__c</fullName>
        <description>Response for: What are your team&apos;s biggest concerns or risks? Do you want to provide any additional comments?</description>
        <inlineHelpText>Enter response for: &quot;What are your team&apos;s biggest concerns or risks? Do you want to provide any additional comments?&quot;</inlineHelpText>
        <label>Concerns Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__EA_Perm_Label__c</fullName>
        <formula>&quot;Does your team have changes which are NOT being developed behind a perm OR are part of a Dark Launch? If yes, explain what are these changes?&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__EA_Perm_Response__c</fullName>
        <description>Reponse for: Does your team have changes which are NOT being developed behind a perm OR are part of a Dark Launch? If yes, explain what are these changes?</description>
        <inlineHelpText>Enter response for: &quot;Does your team have changes which are NOT being developed behind a perm OR are part of a Dark Launch? If yes, explain what are these changes?&quot;</inlineHelpText>
        <label>Perm Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__EA_Split_Label__c</fullName>
        <formula>&quot;If your team owns a Split Script, have you reviewed it for the next release?  If your team is in the &quot; + HYPERLINK(&quot;https://docs.google.com/a/salesforce.com/document/d/1hyi8m80Gh-N0PulD4LaaC9GNidxHl2FIke3a-gVPDQ8/edit#&quot;,&quot;Split Risk Group&quot;) + &quot;, have you verified that your feature set will continue to work after the next split?&quot; +  BR() + BR()+ &quot;Has your team completed the required BUTC/Maven work?&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__EA_Split_Response__c</fullName>
        <description>Response for: If your team owns a Split Script, have you reviewed it for the next release?  If your team is in the Split Risk Group, have you verified that your feature set will continue to work after the next split?
Has your team completed the required BUTC/Maven work?</description>
        <inlineHelpText>If team owns a Split Script, have you reviewed it for the next release?  If your team is in the Split Risk Group, have you verified that your feature set will continue to work after the next split? Has your team completed the required BUTC/Maven work?</inlineHelpText>
        <label>Split Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__EA_Test_Label__c</fullName>
        <formula>&quot;Does your team have adequate test coverage for any re-factoring work that is being done? If not, what is your plan to add test coverage?&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__EA_Test_Response__c</fullName>
        <description>Response for: Does your team have adequate test coverage for any re-factoring work that is being done? If not, what is your plan to add test coverage?</description>
        <inlineHelpText>Enter your response for: &quot;Does your team have adequate test coverage for any re-factoring work that is being done? If not, what is your plan to add test coverage?&quot;</inlineHelpText>
        <label>Test Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__EA_Trust_Label__c</fullName>
        <formula>&quot;Is your team on course to complete the TRUST work for which you planned?  If not, explain why you changed course.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__EA_Trust_Response__c</fullName>
        <description>Response for: Is your team on course to complete the TRUST work for which you planned? If not, explain why you changed course.</description>
        <inlineHelpText>Enter response for question: &quot;Is your team on course to complete the TRUST work for which you planned? If not, explain why you changed course.&quot;</inlineHelpText>
        <label>Trust Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__Expalin_if_Team_is_Yellow_Red__c</fullName>
        <inlineHelpText>Please provide details on why the team is in Yellow or Red status in  terms of meeting FF</inlineHelpText>
        <label>Explain if Team is Yellow or Red</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_3rd_Party_Product__c</fullName>
        <description>If the Answer is NO then provide an explanation and the plan.</description>
        <inlineHelpText>If the Answer is NO then provide an explanation and the plan.</inlineHelpText>
        <label>Explain Unapproved 3rd Party Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Automated_Tests_Annotated__c</fullName>
        <description>Explain if the %Automated Tests Annotated is less than 80%</description>
        <inlineHelpText>Explain if the %Automated Tests Annotated is less than 80%</inlineHelpText>
        <label>Explain % Automated Tests Annotated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Bugs_TF_to_Fix__c</fullName>
        <description>Explain if Total Number of Bugs/TF to Fix exceeds maximum 2 per Full-Time Developer</description>
        <inlineHelpText>Explain if Total Number of Bugs/TF to Fix exceeds maximum 2 per Full-Time Developer</inlineHelpText>
        <label>Explain Bugs/TF to Fix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Bugs_TF_to_Verify__c</fullName>
        <description>Explain if Total Number of Fixed Bugs/TF to Verify exceeds maximum 2 per Full-Time QE</description>
        <inlineHelpText>Explain if Total Number of Fixed Bugs/TF to Verify exceeds maximum 2 per Full-Time QE</inlineHelpText>
        <label>Explain Bugs/TF to Verify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Bugs_missing_Automation__c</fullName>
        <description>Explain if Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation is &gt; 0</description>
        <inlineHelpText>Explain if Total Number of Closed P0/P1/P2 Bugs and Closed Bugs-with-Cases that do not have automation is &gt; 0</inlineHelpText>
        <label>Explain Bugs missing Automation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Bugs_to_Fix__c</fullName>
        <description>Explain if Total Number of Bugs to Fix exceeds maximum 1 per Full-Time Developer</description>
        <inlineHelpText>Explain if Total Number of Bugs to Fix exceeds maximum 1 per Full-Time Developer</inlineHelpText>
        <label>Explain Bugs to Fix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Bugs_to_Verify__c</fullName>
        <description>Explain if Total Number of Fixed Bugs to Verify exceeds maximum 1 per Full-Time QE</description>
        <inlineHelpText>Explain if Total Number of Fixed Bugs to Verify exceeds maximum 1 per Full-Time QE</inlineHelpText>
        <label>Explain Bugs to Verify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Code_Line_is_Potentially_Releasa__c</fullName>
        <description>Explain Code Line is Potentially Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Bug/TF Criteria below (Yes/No)</description>
        <inlineHelpText>Explain Code Line is Potentially Releasable – All New Features and Enhancements meet the Definition of Done and Code Line meets Bug/TF Criteria below (Yes/No)</inlineHelpText>
        <label>Explain if not Potentially Releasable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_DB_Upgrade_Scripts_Incomplete__c</fullName>
        <description>Explain if DB Upgrade Scripts are not Complete and Verified.</description>
        <inlineHelpText>Explain if DB Upgrade Scripts are not Complete and Verified.</inlineHelpText>
        <label>Explain DB Upgrade Scripts Incomplete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Extended_ftest_Test_Failures__c</fullName>
        <label>Explain Extended ftest Test Failures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_High_TF_Fix_Rate__c</fullName>
        <label>Explain High TF Fix Rate</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Explain_High__c</fullName>
        <label>Explain High Risk Perf Features</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_IT_Compliance_Not_Met__c</fullName>
        <description>IT Feature Freeze Criteria to explain any legal, tax, regulatory, regional, business or IT SOX compliance not met or N/A.</description>
        <inlineHelpText>IT Feature Freeze Criteria to explain any legal, tax, regulatory, regional, business or IT SOX compliance not met or N/A.</inlineHelpText>
        <label>Explain IT Compliance Not Met</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_IT_Conversion_Plan_Incomplete__c</fullName>
        <description>IT Feature Freeze Criteria to explain if data conversion plan has not been automated, tested, reviewed, validated or potentially performance tuned.</description>
        <inlineHelpText>IT Feature Freeze Criteria to explain if data conversion plan has not been automated, tested, reviewed, validated or potentially performance tuned.</inlineHelpText>
        <label>Explain IT Conversion Plan Incomplete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_IT_Prod_Support_Model_Incomplete__c</fullName>
        <description>IT Feature Freeze Criteria to explain if a production support model has not been documented, reviewed or signed off (Tier 1, Tier 2, etc.).</description>
        <inlineHelpText>IT Feature Freeze Criteria to explain if a production support model has not been documented, reviewed or signed off (Tier 1, Tier 2, etc.).</inlineHelpText>
        <label>Explain IT Prod Support Model Incomplete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_IT_Rollback_Plan_Incomplete__c</fullName>
        <description>IT Feature Freeze to explain if rollback and contingency plans are not documented, tested or ready for IT VAT and CAB review.</description>
        <inlineHelpText>IT Feature Freeze to explain if rollback and contingency plans are not documented, tested or ready for IT VAT and CAB review.</inlineHelpText>
        <label>Explain IT Rollback Plan Incomplete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_IT_Security_Reviews_Incomplete__c</fullName>
        <description>IT Freature Freeze Criteria to explain any Security Reviews, testing or fixes complete.</description>
        <inlineHelpText>IT Freature Freeze Criteria to explain any Security Reviews, testing or fixes complete.</inlineHelpText>
        <label>Explain IT Security Reviews Incomplete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_IT_Stage_Environment_not_ready__c</fullName>
        <description>IT Feature Freeze Criteria to explain if the stage environment is not prepared for the Release Sprint/UAT.</description>
        <inlineHelpText>IT Feature Freeze Criteria to explain if the stage environment is not prepared for the Release Sprint/UAT.</inlineHelpText>
        <label>Explain IT Stage Environment not ready</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_IT_VAT_Review_Incomplete__c</fullName>
        <description>IT Feature Freeze Criteria to explain any IT VAT architecture reviews, requirements or exceptions that have not been performed and noted.</description>
        <inlineHelpText>IT Feature Freeze Criteria to explain any IT VAT architecture reviews, requirements or exceptions that have not been performed and noted.</inlineHelpText>
        <label>Explain IT VAT Review Incomplete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Java_Package_and_PL_SQL_Coverage__c</fullName>
        <description>Explain if the Java Package or PL/SQL Coverage is &lt; 20%</description>
        <inlineHelpText>Explain if the Java Package or PL/SQL Coverage is &lt; 20%</inlineHelpText>
        <label>Explain Java Package and PL/SQL Coverage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Num_P1_Bugs_TF_to_Fix_Verify__c</fullName>
        <label>Explain Num P1 Bugs/TF to Fix/Verify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Num_P2_Bugs_TF_to_Fix_Verify__c</fullName>
        <label>Explain Num P2 Bugs/TF to Fix/Verify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_Bugs__c</fullName>
        <inlineHelpText>Explain Open P0, P1 &amp; P2 Bugs</inlineHelpText>
        <label>Explain Open Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_Feature_Requests__c</fullName>
        <label>Explain Open Feature Requests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_P012_Bugs__c</fullName>
        <inlineHelpText>P012 Bugs = Zero</inlineHelpText>
        <label>Explain Open P012 Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_RCA_Bugs__c</fullName>
        <inlineHelpText>All P0,1,2 Bugs from RCAs older than 1 month, *including* previous or current releases should be closed.</inlineHelpText>
        <label>Explain Open RCA Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_RCA_Stories__c</fullName>
        <inlineHelpText>All User-stories from RCAs older than 1 month, must be closed or scheduled for a release or sprint</inlineHelpText>
        <label>Explain Open RCA Stories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_RCA_To_D__c</fullName>
        <inlineHelpText>All ToDos (all priorities) from RCAs older than 1 month, *including* previous or current releases should be closed.</inlineHelpText>
        <label>Explain Open RCA To Do&apos;s</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_Regression__c</fullName>
        <inlineHelpText>Regressions = Zero</inlineHelpText>
        <label>Explain Open Regression</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_Security_bugs__c</fullName>
        <inlineHelpText>P012 Security Bugs are closed or approved by ProdSec in the release that is open at the time of their discovery.</inlineHelpText>
        <label>Explain Open Security bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_TF_1_Week__c</fullName>
        <inlineHelpText>TF &gt; 1 Week = Zero {Inc Flappers}</inlineHelpText>
        <label>Explain Open TF &gt; 1 Week {Inc Flappers}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_TF__c</fullName>
        <inlineHelpText>TF on basic ftest, basic selenium &amp; utest = Zero
(Does not inc Flappers)</inlineHelpText>
        <label>Explain Open TF&apos;s</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_Open_User_Stories__c</fullName>
        <description>Number of Open User Stories – excluding “Release Sprint Theme” stories (0)</description>
        <inlineHelpText>Number of Open User Stories – excluding “Release Sprint Theme” stories (0)</inlineHelpText>
        <label>Explain Open User Stories</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_P0_Blocking_Bugs__c</fullName>
        <description>Explain if P0/Blocking Bugs are &gt; 0</description>
        <inlineHelpText>Explain if P0/Blocking Bugs are &gt; 0</inlineHelpText>
        <label>Explain Your P0/Blocking Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_P0_Bugs_at_FF__c</fullName>
        <description>IT Feature Freeze Criteria for teams to provide explanation for any open P0 bugs at FF.</description>
        <inlineHelpText>Provide an explanation for any open P0 bugs at FF.</inlineHelpText>
        <label>Explain P0 Bugs at FF</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Explain_P1_P2_Bugs_TF_1_wk_old__c</fullName>
        <label>Explain P1/P2 Bugs/TF &gt;1 wk old</label>
        <type>TextArea</type>
    </fields>
</CustomObject>